set up geo code api to find cordinates for a given city.  Then used weather api to log the weather for the given cordinates

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container my-3">
         <div class="row">
-            <input type="text" id="whatsInTheBox" class="col-6" placeholder="type here">
+            <input type="text" id="textBox" class="col-6" placeholder="type here">
             
             <button class="btn btn-primary col-3">clicked</button>
             
