--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
     </div>
     <footer class="container">
-            <div class="row">
+            <div class="row buttons">
 
             </div>
     </footer>
